--- a/notebooks/standalone/curse_of_dimensionality_standalone.ipynb
+++ b/notebooks/standalone/curse_of_dimensionality_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "05c49a61",
+   "id": "5ee6cbc8",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a064607",
+   "id": "39fbd7bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f00f221b",
+   "id": "f13b7bf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.helpers.curseofdim  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import numpy as np\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def compute_pairwise_distances(A):\n",
+    "    sq_norms = np.sum(A ** 2, axis=1)\n",
+    "    dists_squared = sq_norms[:, None] + sq_norms[None, :] - 2 * A @ A.T\n",
+    "    dists_squared = np.maximum(dists_squared, 0)\n",
+    "    distances = np.sqrt(dists_squared)\n",
+    "    np.fill_diagonal(distances, np.nan)\n",
+    "    distances = distances.flatten()\n",
+    "    return distances[~np.isnan(distances)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "997a75fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +96,12 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
+    "def test_orthogonality(n_dim, n_vecs=1000, min_cos_sim=0.01):\n",
+    "    X = np.random.randn(n_vecs, n_dim)\n",
+    "    C = cosine_similarity(X, X)\n",
+    "    num_almost_orthogonal = (C < min_cos_sim).sum()\n",
+    "    return num_almost_orthogonal / (n_vecs * n_vecs - n_vecs)\n",
+    "\n",
     "def plot_pairwise_distance_histogram(pairwise_distances, num_dim):\n",
     "    max_dist = np.linalg.norm(np.array([1.0] * num_dim) - np.array([0.0] * num_dim))\n",
     "    plt.figure(figsize=(7, 4.5))\n",
@@ -81,39 +113,7 @@
     "    plt.ylabel('Frequency (%)', fontsize=16)\n",
     "    plt.hist(pairwise_distances, bins=200, density=True, label='#dimensions={}'.format(num_dim))\n",
     "    plt.legend(loc='upper right', prop={'size': 15})\n",
-    "    plt.tight_layout()\n",
-    "\n",
-    "def test_orthogonality(n_dim, n_vecs=1000, min_cos_sim=0.01):\n",
-    "    X = np.random.randn(n_vecs, n_dim)\n",
-    "    C = cosine_similarity(X, X)\n",
-    "    num_almost_orthogonal = (C < min_cos_sim).sum()\n",
-    "    return num_almost_orthogonal / (n_vecs * n_vecs - n_vecs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ca9c2d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.helpers.curseofdim  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import numpy as np\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def compute_pairwise_distances(A):\n",
-    "    sq_norms = np.sum(A ** 2, axis=1)\n",
-    "    dists_squared = sq_norms[:, None] + sq_norms[None, :] - 2 * A @ A.T\n",
-    "    dists_squared = np.maximum(dists_squared, 0)\n",
-    "    distances = np.sqrt(dists_squared)\n",
-    "    np.fill_diagonal(distances, np.nan)\n",
-    "    distances = distances.flatten()\n",
-    "    return distances[~np.isnan(distances)]"
+    "    plt.tight_layout()"
    ]
   },
   {
