--- a/notebooks/standalone/decision_trees_cart_standalone.ipynb
+++ b/notebooks/standalone/decision_trees_cart_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7193c7ce",
+   "id": "9619d550",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a37ceab4",
+   "id": "5178dc5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,54 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e63cced",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.plotting.cart  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import numpy as np\n",
-    "from matplotlib.colors import ListedColormap\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn import tree\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def plot_cart_data(X, y, model=None, resolution=0.005):\n",
-    "    plt.figure(figsize=(5, 4))\n",
-    "    markers = ('s', 'x', 'o', '^', 'v')\n",
-    "    colors = ('red', 'blue', 'lightgreen', 'gray', 'cyan')\n",
-    "    cmap = ListedColormap(colors[:len(np.unique(y))])\n",
-    "    if model is not None:\n",
-    "        x1_min, x1_max = (X[:, 0].min() - 1, X[:, 0].max() + 1)\n",
-    "        x2_min, x2_max = (X[:, 1].min() - 1, X[:, 1].max() + 1)\n",
-    "        xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution), np.arange(x2_min, x2_max, resolution))\n",
-    "        Z = model.predict(np.array([xx1.ravel(), xx2.ravel()]).T)\n",
-    "        Z = Z.reshape(xx1.shape)\n",
-    "        plt.contourf(xx1, xx2, Z, alpha=0.4, cmap=cmap)\n",
-    "    plt.xlim(0, 1)\n",
-    "    plt.ylim(0, 1)\n",
-    "    for c in np.unique(y):\n",
-    "        x1 = X[y[:] == c][:, 0]\n",
-    "        x2 = X[y[:] == c][:, 1]\n",
-    "        plt.scatter(x1, x2, c=colors[int(c)], s=100)\n",
-    "    plt.tick_params(top=False, bottom=False, left=False, right=False, labelleft=False, labelbottom=False)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "def plot_decision_tree(model):\n",
-    "    plt.figure(figsize=(8, 8))\n",
-    "    tree.plot_tree(model, filled=True)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0324ccab",
+   "id": "45fc5217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +38,9 @@
     "\n",
     "# === Inlined imports ===\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from itertools import chain, combinations\n",
-    "import pandas as pd\n",
     "\n",
     "# === Embedded configs ===\n",
     "\n",
@@ -98,80 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b965b6ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.data.files  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
-    "import zipfile, tarfile\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "CONFIG = yaml.safe_load(\"\"\"urls:\n",
-    "  downloads:\n",
-    "    notebooks: \"https://github.com/chrisvdweth/selene/tree/master/notebooks\"\n",
-    "    datasets: \"https://chrisvdw.net/projects/selene/downloads/datasets/\"\n",
-    "    models: \"https://chrisvdw.net/projects/selene/downloads/models/\"\n",
-    "    \"\"\")\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
-    "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
-    "    file_name = url.split('/')[-1]\n",
-    "    create_folder(download_path)\n",
-    "    file_path = download_path + file_name\n",
-    "    if os.path.isfile(file_path) == True and overwrite is not True:\n",
-    "        print(f\"File '{file_path}' already exists (use 'overwrite=True' to overwrite it).\")\n",
-    "        return (file_path, download_path)\n",
-    "    response = requests.get(url, stream=True)\n",
-    "    total_size_in_bytes = int(response.headers.get('content-length', 0))\n",
-    "    block_size = 1024\n",
-    "    progress_bar = tqdm(total=total_size_in_bytes, unit='iB', unit_scale=True)\n",
-    "    with open(file_path, 'wb') as file:\n",
-    "        for data in response.iter_content(block_size):\n",
-    "            if ignore_html is True and is_html_file(data) is True:\n",
-    "                print('Error downloading file (expected data file, got HTML file)')\n",
-    "                return (None, None)\n",
-    "            progress_bar.update(len(data))\n",
-    "            file.write(data)\n",
-    "    progress_bar.close()\n",
-    "    if total_size_in_bytes != 0 and progress_bar.n != total_size_in_bytes:\n",
-    "        print('Error downloading file (source does not exist)')\n",
-    "        return (None, None)\n",
-    "    return (file_path, download_path)\n",
-    "\n",
-    "def is_html_file(content):\n",
-    "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
-    "    if content.startswith('<!doctype html') is True:\n",
-    "        return True\n",
-    "    elif content.startswith('<html') is True:\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "def create_folder(folder_name, exist_ok=True):\n",
-    "    try:\n",
-    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
-    "        return folder_name\n",
-    "    except:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1ccef83",
+   "id": "24aac3a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,21 +65,30 @@
     "\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def compute_thresholds(self, feature_values):\n",
-    "    values_sorted = np.unique(feature_values)\n",
-    "    return (values_sorted[:-1] + values_sorted[1:]) / 2.0\n",
-    "\n",
     "def compute_gini_score_node(self, y):\n",
     "    _, counts = np.unique(y, return_counts=True)\n",
     "    return 1 - np.sum(np.square(counts / len(y)))\n",
     "\n",
-    "def fit(self, X, y):\n",
-    "    self.tree = Node(y)\n",
-    "    self._fit(X, y, self.tree)\n",
-    "    return self\n",
-    "\n",
     "def predict(self, X):\n",
     "    return np.array([self.predict_sample(self.tree, x) for x in X])\n",
+    "\n",
+    "def find_best_split(self, X, y):\n",
+    "    best_score, best_criterion, best_col, best_split = (np.inf, None, None, None)\n",
+    "    for col in range(X.shape[1]):\n",
+    "        x = X[:, col]\n",
+    "        score, threshold, split = self.find_best_feature_split(x, y, self.feature_types[col])\n",
+    "        if score <= best_score:\n",
+    "            best_score, best_split, best_col, best_threshold = (score, split, col, threshold)\n",
+    "    return (best_score, best_threshold, best_col, best_split)\n",
+    "\n",
+    "def compute_thresholds(self, feature_values):\n",
+    "    values_sorted = np.unique(feature_values)\n",
+    "    return (values_sorted[:-1] + values_sorted[1:]) / 2.0\n",
+    "\n",
+    "def generate_split_general(self, feature_values, threshold):\n",
+    "    indices_left = np.where(feature_values <= threshold)[0]\n",
+    "    indices_right = np.where(feature_values > threshold)[0]\n",
+    "    return (indices_left, indices_right)\n",
     "\n",
     "class Node:\n",
     "    \"\"\"\n",
@@ -226,6 +115,11 @@
     "        else:\n",
     "            return f'X[{self.feature_col}], criterion: {self.criterion}, gini: {self.score:.3f}, samples: {self.y}'\n",
     "\n",
+    "def generate_split_nominal(self, feature_values, partition):\n",
+    "    indices_left = [idx for idx, val in enumerate(feature_values) if val in partition[0]]\n",
+    "    indices_right = [idx for idx, val in enumerate(feature_values) if val in partition[1]]\n",
+    "    return (indices_left, indices_right)\n",
+    "\n",
     "def compute_partitions(self, feature_values):\n",
     "    partitions = []\n",
     "    values = set(feature_values)\n",
@@ -240,14 +134,10 @@
     "        partitions.append((left, right))\n",
     "    return partitions\n",
     "\n",
-    "def find_best_split(self, X, y):\n",
-    "    best_score, best_criterion, best_col, best_split = (np.inf, None, None, None)\n",
-    "    for col in range(X.shape[1]):\n",
-    "        x = X[:, col]\n",
-    "        score, threshold, split = self.find_best_feature_split(x, y, self.feature_types[col])\n",
-    "        if score <= best_score:\n",
-    "            best_score, best_split, best_col, best_threshold = (score, split, col, threshold)\n",
-    "    return (best_score, best_threshold, best_col, best_split)\n",
+    "def compute_gini_score_split(self, y_left, y_right):\n",
+    "    gini_score_left = self.compute_gini_score_node(y_left)\n",
+    "    gini_score_right = self.compute_gini_score_node(y_right)\n",
+    "    return len(y_left) / (len(y_left) + len(y_right)) * gini_score_left + len(y_right) / (len(y_left) + len(y_right)) * gini_score_right\n",
     "\n",
     "def find_best_feature_split(self, x, y, feature_type):\n",
     "    best_score, best_criterion, best_split = (np.inf, None, None)\n",
@@ -393,20 +283,130 @@
     "        if node.right_child is not None:\n",
     "            self.print_tree(node.right_child, level=level + 1)\n",
     "\n",
-    "def compute_gini_score_split(self, y_left, y_right):\n",
-    "    gini_score_left = self.compute_gini_score_node(y_left)\n",
-    "    gini_score_right = self.compute_gini_score_node(y_right)\n",
-    "    return len(y_left) / (len(y_left) + len(y_right)) * gini_score_left + len(y_right) / (len(y_left) + len(y_right)) * gini_score_right\n",
+    "def fit(self, X, y):\n",
+    "    self.tree = Node(y)\n",
+    "    self._fit(X, y, self.tree)\n",
+    "    return self"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de55accb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.data.files  ==\n",
     "\n",
-    "def generate_split_general(self, feature_values, threshold):\n",
-    "    indices_left = np.where(feature_values <= threshold)[0]\n",
-    "    indices_right = np.where(feature_values > threshold)[0]\n",
-    "    return (indices_left, indices_right)\n",
+    "# === Inlined imports ===\n",
+    "import zipfile, tarfile\n",
+    "import bz2\n",
+    "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
     "\n",
-    "def generate_split_nominal(self, feature_values, partition):\n",
-    "    indices_left = [idx for idx, val in enumerate(feature_values) if val in partition[0]]\n",
-    "    indices_right = [idx for idx, val in enumerate(feature_values) if val in partition[1]]\n",
-    "    return (indices_left, indices_right)"
+    "# === Embedded configs ===\n",
+    "CONFIG = yaml.safe_load(\"\"\"urls:\n",
+    "  downloads:\n",
+    "    notebooks: \"https://github.com/chrisvdweth/selene/tree/master/notebooks\"\n",
+    "    datasets: \"https://chrisvdw.net/projects/selene/downloads/datasets/\"\n",
+    "    models: \"https://chrisvdw.net/projects/selene/downloads/models/\"\n",
+    "    \"\"\")\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
+    "    file_name = url.split('/')[-1]\n",
+    "    create_folder(download_path)\n",
+    "    file_path = download_path + file_name\n",
+    "    if os.path.isfile(file_path) == True and overwrite is not True:\n",
+    "        print(f\"File '{file_path}' already exists (use 'overwrite=True' to overwrite it).\")\n",
+    "        return (file_path, download_path)\n",
+    "    response = requests.get(url, stream=True)\n",
+    "    total_size_in_bytes = int(response.headers.get('content-length', 0))\n",
+    "    block_size = 1024\n",
+    "    progress_bar = tqdm(total=total_size_in_bytes, unit='iB', unit_scale=True)\n",
+    "    with open(file_path, 'wb') as file:\n",
+    "        for data in response.iter_content(block_size):\n",
+    "            if ignore_html is True and is_html_file(data) is True:\n",
+    "                print('Error downloading file (expected data file, got HTML file)')\n",
+    "                return (None, None)\n",
+    "            progress_bar.update(len(data))\n",
+    "            file.write(data)\n",
+    "    progress_bar.close()\n",
+    "    if total_size_in_bytes != 0 and progress_bar.n != total_size_in_bytes:\n",
+    "        print('Error downloading file (source does not exist)')\n",
+    "        return (None, None)\n",
+    "    return (file_path, download_path)\n",
+    "\n",
+    "def create_folder(folder_name, exist_ok=True):\n",
+    "    try:\n",
+    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
+    "        return folder_name\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
+    "\n",
+    "def is_html_file(content):\n",
+    "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
+    "    if content.startswith('<!doctype html') is True:\n",
+    "        return True\n",
+    "    elif content.startswith('<html') is True:\n",
+    "        return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da23933d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.plotting.cart  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import tree\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def plot_decision_tree(model):\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "    tree.plot_tree(model, filled=True)\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_cart_data(X, y, model=None, resolution=0.005):\n",
+    "    plt.figure(figsize=(5, 4))\n",
+    "    markers = ('s', 'x', 'o', '^', 'v')\n",
+    "    colors = ('red', 'blue', 'lightgreen', 'gray', 'cyan')\n",
+    "    cmap = ListedColormap(colors[:len(np.unique(y))])\n",
+    "    if model is not None:\n",
+    "        x1_min, x1_max = (X[:, 0].min() - 1, X[:, 0].max() + 1)\n",
+    "        x2_min, x2_max = (X[:, 1].min() - 1, X[:, 1].max() + 1)\n",
+    "        xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution), np.arange(x2_min, x2_max, resolution))\n",
+    "        Z = model.predict(np.array([xx1.ravel(), xx2.ravel()]).T)\n",
+    "        Z = Z.reshape(xx1.shape)\n",
+    "        plt.contourf(xx1, xx2, Z, alpha=0.4, cmap=cmap)\n",
+    "    plt.xlim(0, 1)\n",
+    "    plt.ylim(0, 1)\n",
+    "    for c in np.unique(y):\n",
+    "        x1 = X[y[:] == c][:, 0]\n",
+    "        x2 = X[y[:] == c][:, 1]\n",
+    "        plt.scatter(x1, x2, c=colors[int(c)], s=100)\n",
+    "    plt.tick_params(top=False, bottom=False, left=False, right=False, labelleft=False, labelbottom=False)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
    ]
   },
   {
