--- a/notebooks/standalone/linear_regression_basics_standalone.ipynb
+++ b/notebooks/standalone/linear_regression_basics_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0d670fe9",
+   "id": "56f9bf12",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07d487ea",
+   "id": "7ce89360",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,23 +30,135 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd1b308d",
+   "id": "c5206ad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.data.files  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import zipfile, tarfile\n",
+    "import bz2\n",
+    "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "CONFIG = yaml.safe_load(\"\"\"urls:\n",
+    "  downloads:\n",
+    "    notebooks: \"https://github.com/chrisvdweth/selene/tree/master/notebooks\"\n",
+    "    datasets: \"https://chrisvdw.net/projects/selene/downloads/datasets/\"\n",
+    "    models: \"https://chrisvdw.net/projects/selene/downloads/models/\"\n",
+    "    \"\"\")\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
+    "    file_name = url.split('/')[-1]\n",
+    "    create_folder(download_path)\n",
+    "    file_path = download_path + file_name\n",
+    "    if os.path.isfile(file_path) == True and overwrite is not True:\n",
+    "        print(f\"File '{file_path}' already exists (use 'overwrite=True' to overwrite it).\")\n",
+    "        return (file_path, download_path)\n",
+    "    response = requests.get(url, stream=True)\n",
+    "    total_size_in_bytes = int(response.headers.get('content-length', 0))\n",
+    "    block_size = 1024\n",
+    "    progress_bar = tqdm(total=total_size_in_bytes, unit='iB', unit_scale=True)\n",
+    "    with open(file_path, 'wb') as file:\n",
+    "        for data in response.iter_content(block_size):\n",
+    "            if ignore_html is True and is_html_file(data) is True:\n",
+    "                print('Error downloading file (expected data file, got HTML file)')\n",
+    "                return (None, None)\n",
+    "            progress_bar.update(len(data))\n",
+    "            file.write(data)\n",
+    "    progress_bar.close()\n",
+    "    if total_size_in_bytes != 0 and progress_bar.n != total_size_in_bytes:\n",
+    "        print('Error downloading file (source does not exist)')\n",
+    "        return (None, None)\n",
+    "    return (file_path, download_path)\n",
+    "\n",
+    "def create_folder(folder_name, exist_ok=True):\n",
+    "    try:\n",
+    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
+    "        return folder_name\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
+    "\n",
+    "def is_html_file(content):\n",
+    "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
+    "    if content.startswith('<!doctype html') is True:\n",
+    "        return True\n",
+    "    elif content.startswith('<html') is True:\n",
+    "        return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88ca73c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.libimports.linreg  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "from sklearn.metrics import r2_score, root_mean_squared_error\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import scipy.stats as stats\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51b1659b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.utils.plotting.linreg  ==\n",
     "\n",
     "# === Inlined imports ===\n",
-    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "import numpy as np\n",
     "from matplotlib import cm\n",
-    "import seaborn as sns\n",
     "from itertools import cycle\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# === Embedded configs ===\n",
     "\n",
     "\n",
     "# === Inlined definitions ===\n",
+    "def plot_random_losses(xs, ys, zs):\n",
+    "    xs = np.array(xs)\n",
+    "    ys = np.array(ys)\n",
+    "    zs = np.array(zs)\n",
+    "    fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
+    "    ax.view_init(30, -30)\n",
+    "    ax.set_xlabel('$w_1$', fontsize=16)\n",
+    "    ax.set_ylabel('$w_0$', fontsize=16)\n",
+    "    ax.set_zlabel('L', fontsize=16)\n",
+    "    ax.scatter(xs, ys, zs)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
     "def plot_csi_data(X, y, regression_lines=[], show_errors=False):\n",
     "    plt.figure()\n",
     "    plt.scatter(X, y, color='blue', alpha=0.6, label='data points')\n",
@@ -93,119 +205,7 @@
     "    plt.xlim([min_val * 0.9, max_val * 1.1])\n",
     "    plt.ylim([min_val * 0.9, max_val * 1.1])\n",
     "    plt.gca().set_aspect('equal', adjustable='box')\n",
-    "    plt.show()\n",
-    "\n",
-    "def plot_random_losses(xs, ys, zs):\n",
-    "    xs = np.array(xs)\n",
-    "    ys = np.array(ys)\n",
-    "    zs = np.array(zs)\n",
-    "    fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
-    "    ax.view_init(30, -30)\n",
-    "    ax.set_xlabel('$w_1$', fontsize=16)\n",
-    "    ax.set_ylabel('$w_0$', fontsize=16)\n",
-    "    ax.set_zlabel('L', fontsize=16)\n",
-    "    ax.scatter(xs, ys, zs)\n",
-    "    plt.tight_layout()\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5645117",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.libimports.linreg  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import scipy.stats as stats\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import r2_score, root_mean_squared_error\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "import statsmodels.api as sm\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8d616cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.data.files  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
-    "import zipfile, tarfile\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "CONFIG = yaml.safe_load(\"\"\"urls:\n",
-    "  downloads:\n",
-    "    notebooks: \"https://github.com/chrisvdweth/selene/tree/master/notebooks\"\n",
-    "    datasets: \"https://chrisvdw.net/projects/selene/downloads/datasets/\"\n",
-    "    models: \"https://chrisvdw.net/projects/selene/downloads/models/\"\n",
-    "    \"\"\")\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
-    "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
-    "    file_name = url.split('/')[-1]\n",
-    "    create_folder(download_path)\n",
-    "    file_path = download_path + file_name\n",
-    "    if os.path.isfile(file_path) == True and overwrite is not True:\n",
-    "        print(f\"File '{file_path}' already exists (use 'overwrite=True' to overwrite it).\")\n",
-    "        return (file_path, download_path)\n",
-    "    response = requests.get(url, stream=True)\n",
-    "    total_size_in_bytes = int(response.headers.get('content-length', 0))\n",
-    "    block_size = 1024\n",
-    "    progress_bar = tqdm(total=total_size_in_bytes, unit='iB', unit_scale=True)\n",
-    "    with open(file_path, 'wb') as file:\n",
-    "        for data in response.iter_content(block_size):\n",
-    "            if ignore_html is True and is_html_file(data) is True:\n",
-    "                print('Error downloading file (expected data file, got HTML file)')\n",
-    "                return (None, None)\n",
-    "            progress_bar.update(len(data))\n",
-    "            file.write(data)\n",
-    "    progress_bar.close()\n",
-    "    if total_size_in_bytes != 0 and progress_bar.n != total_size_in_bytes:\n",
-    "        print('Error downloading file (source does not exist)')\n",
-    "        return (None, None)\n",
-    "    return (file_path, download_path)\n",
-    "\n",
-    "def is_html_file(content):\n",
-    "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
-    "    if content.startswith('<!doctype html') is True:\n",
-    "        return True\n",
-    "    elif content.startswith('<html') is True:\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "def create_folder(folder_name, exist_ok=True):\n",
-    "    try:\n",
-    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
-    "        return folder_name\n",
-    "    except:\n",
-    "        return None"
    ]
   },
   {
