--- a/notebooks/standalone/llm_building_gptstyle_llm_from_scratch_standalone.ipynb
+++ b/notebooks/standalone/llm_building_gptstyle_llm_from_scratch_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "20c8b660",
+   "id": "45971e22",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "475a12da",
+   "id": "1170fd6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b0efdc3",
+   "id": "65ac508d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.compute.gpu  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import torch\n",
+    "import random\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def select_device(force_cpu=False, required_memory_gb=None):\n",
+    "    if force_cpu == True:\n",
+    "        return torch.device('cpu')\n",
+    "    candidate_gpus = []\n",
+    "    for i in range(torch.cuda.device_count()):\n",
+    "        free, total = torch.cuda.mem_get_info(device=i)\n",
+    "        if required_memory_gb is None or free / (1024 * 1024 * 1024) > required_memory_gb:\n",
+    "            candidate_gpus.append((i, free))\n",
+    "    if len(candidate_gpus) == 0:\n",
+    "        return torch.device('cpu')\n",
+    "    else:\n",
+    "        device = torch.cuda.device(random.choice(candidate_gpus)[0])\n",
+    "        return torch.device(f'cuda:{device.idx}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16cf7530",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.utils.data.files  ==\n",
     "\n",
     "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
     "import zipfile, tarfile\n",
+    "import bz2\n",
     "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
     "\n",
     "# === Embedded configs ===\n",
     "CONFIG = yaml.safe_load(\"\"\"urls:\n",
@@ -52,14 +84,6 @@
     "    \"\"\")\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
     "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
     "    file_name = url.split('/')[-1]\n",
     "    create_folder(download_path)\n",
@@ -126,39 +150,15 @@
     "        with open(output_file_name, 'wb') as output_file, bz2.BZ2File(file_name, 'rb') as file:\n",
     "            for data in iter(lambda: file.read(100 * 1024), b''):\n",
     "                output_file.write(data)\n",
-    "        return output_file_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de8c1003",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.compute.gpu  ==\n",
+    "        return output_file_name\n",
     "\n",
-    "# === Inlined imports ===\n",
-    "import random\n",
-    "import torch\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def select_device(force_cpu=False, required_memory_gb=None):\n",
-    "    if force_cpu == True:\n",
-    "        return torch.device('cpu')\n",
-    "    candidate_gpus = []\n",
-    "    for i in range(torch.cuda.device_count()):\n",
-    "        free, total = torch.cuda.mem_get_info(device=i)\n",
-    "        if required_memory_gb is None or free / (1024 * 1024 * 1024) > required_memory_gb:\n",
-    "            candidate_gpus.append((i, free))\n",
-    "    if len(candidate_gpus) == 0:\n",
-    "        return torch.device('cpu')\n",
-    "    else:\n",
-    "        device = torch.cuda.device(random.choice(candidate_gpus)[0])\n",
-    "        return torch.device(f'cuda:{device.idx}')"
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)"
    ]
   },
   {
