--- a/notebooks/standalone/porter_stemmer_standalone.ipynb
+++ b/notebooks/standalone/porter_stemmer_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3c83d9f6",
+   "id": "ba31d1bb",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8302a26f",
+   "id": "f5bebd7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8653d473",
+   "id": "246e5bfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,40 +43,8 @@
     "\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def _step1c(self, word):\n",
-    "    \"\"\" \"\"\"\n",
-    "    rules = [('y', 'i', self._contains_vowel)]\n",
-    "    return self._apply_rule_list(word, rules)\n",
-    "\n",
-    "def _measure(self, stem):\n",
-    "    \"\"\" \"\"\"\n",
-    "    cv_sequence = self._cv_sequence(stem)\n",
-    "    return cv_sequence.count('vc')\n",
-    "\n",
-    "def _step1b(self, word):\n",
-    "    \"\"\" \"\"\"\n",
-    "    if word.endswith('eed'):\n",
-    "        stem = self._replace_suffix(word, 'eed', '')\n",
-    "        if self._measure(stem) > 0:\n",
-    "            return stem + 'ee'\n",
-    "        else:\n",
-    "            return word\n",
-    "    rule_2_or_3_succeeded = False\n",
-    "    for suffix in ['ed', 'ing']:\n",
-    "        if word.endswith(suffix):\n",
-    "            intermediate_stem = self._replace_suffix(word, suffix, '')\n",
-    "            if self._contains_vowel(intermediate_stem):\n",
-    "                rule_2_or_3_succeeded = True\n",
-    "                break\n",
-    "    if not rule_2_or_3_succeeded:\n",
-    "        return word\n",
-    "    rules = [('at', 'ate', None), ('bl', 'ble', None), ('iz', 'ize', None), ('*d', intermediate_stem[-1], lambda stem: intermediate_stem[-1] not in ('l', 's', 'z')), ('', 'e', lambda stem: self._measure(stem) == 1 and self._ends_cvc(stem))]\n",
-    "    return self._apply_rule_list(intermediate_stem, rules)\n",
-    "\n",
-    "def _step4(self, word):\n",
-    "    \"\"\"  \"\"\"\n",
-    "    measure_gt_1 = lambda stem: self._measure(stem) > 1\n",
-    "    rules = [('al', '', measure_gt_1), ('ance', '', measure_gt_1), ('ence', '', measure_gt_1), ('er', '', measure_gt_1), ('ic', '', measure_gt_1), ('able', '', measure_gt_1), ('ible', '', measure_gt_1), ('ant', '', measure_gt_1), ('ement', '', measure_gt_1), ('ment', '', measure_gt_1), ('ent', '', measure_gt_1), ('ion', '', lambda stem: self._measure(stem) > 1 and stem[-1] in ('s', 't')), ('ou', '', measure_gt_1), ('ism', '', measure_gt_1), ('ate', '', measure_gt_1), ('iti', '', measure_gt_1), ('ous', '', measure_gt_1), ('ive', '', measure_gt_1), ('ize', '', measure_gt_1)]\n",
+    "def _step1a(self, word):\n",
+    "    rules = [('sses', 'ss', None), ('ies', 'i', None), ('ss', 'ss', None), ('s', '', None)]\n",
     "    return self._apply_rule_list(word, rules)\n",
     "\n",
     "class MyPorterStemmer:\n",
@@ -220,17 +188,18 @@
     "        stem = self._step5b(stem)\n",
     "        return stem\n",
     "\n",
-    "def stem(self, word, to_lowercase=True):\n",
-    "    stem = word.lower() if to_lowercase else word\n",
-    "    stem = self._step1a(stem)\n",
-    "    stem = self._step1b(stem)\n",
-    "    stem = self._step1c(stem)\n",
-    "    stem = self._step2(stem)\n",
-    "    stem = self._step3(stem)\n",
-    "    stem = self._step4(stem)\n",
-    "    stem = self._step5a(stem)\n",
-    "    stem = self._step5b(stem)\n",
-    "    return stem\n",
+    "def _step1c(self, word):\n",
+    "    \"\"\" \"\"\"\n",
+    "    rules = [('y', 'i', self._contains_vowel)]\n",
+    "    return self._apply_rule_list(word, rules)\n",
+    "\n",
+    "def _cv_sequence(self, stem):\n",
+    "    return ''.join(['c' if self._is_consonant(stem, i) else 'v' for i, l in enumerate(stem)])\n",
+    "\n",
+    "def _measure(self, stem):\n",
+    "    \"\"\" \"\"\"\n",
+    "    cv_sequence = self._cv_sequence(stem)\n",
+    "    return cv_sequence.count('vc')\n",
     "\n",
     "def _apply_rule_list(self, word, rules):\n",
     "    \"\"\"Applies the first applicable suffix-removal rule to the word\n",
@@ -257,17 +226,40 @@
     "                pass\n",
     "    return word\n",
     "\n",
+    "def _step1b(self, word):\n",
+    "    \"\"\" \"\"\"\n",
+    "    if word.endswith('eed'):\n",
+    "        stem = self._replace_suffix(word, 'eed', '')\n",
+    "        if self._measure(stem) > 0:\n",
+    "            return stem + 'ee'\n",
+    "        else:\n",
+    "            return word\n",
+    "    rule_2_or_3_succeeded = False\n",
+    "    for suffix in ['ed', 'ing']:\n",
+    "        if word.endswith(suffix):\n",
+    "            intermediate_stem = self._replace_suffix(word, suffix, '')\n",
+    "            if self._contains_vowel(intermediate_stem):\n",
+    "                rule_2_or_3_succeeded = True\n",
+    "                break\n",
+    "    if not rule_2_or_3_succeeded:\n",
+    "        return word\n",
+    "    rules = [('at', 'ate', None), ('bl', 'ble', None), ('iz', 'ize', None), ('*d', intermediate_stem[-1], lambda stem: intermediate_stem[-1] not in ('l', 's', 'z')), ('', 'e', lambda stem: self._measure(stem) == 1 and self._ends_cvc(stem))]\n",
+    "    return self._apply_rule_list(intermediate_stem, rules)\n",
+    "\n",
+    "def _step4(self, word):\n",
+    "    \"\"\"  \"\"\"\n",
+    "    measure_gt_1 = lambda stem: self._measure(stem) > 1\n",
+    "    rules = [('al', '', measure_gt_1), ('ance', '', measure_gt_1), ('ence', '', measure_gt_1), ('er', '', measure_gt_1), ('ic', '', measure_gt_1), ('able', '', measure_gt_1), ('ible', '', measure_gt_1), ('ant', '', measure_gt_1), ('ement', '', measure_gt_1), ('ment', '', measure_gt_1), ('ent', '', measure_gt_1), ('ion', '', lambda stem: self._measure(stem) > 1 and stem[-1] in ('s', 't')), ('ou', '', measure_gt_1), ('ism', '', measure_gt_1), ('ate', '', measure_gt_1), ('iti', '', measure_gt_1), ('ous', '', measure_gt_1), ('ive', '', measure_gt_1), ('ize', '', measure_gt_1)]\n",
+    "    return self._apply_rule_list(word, rules)\n",
+    "\n",
+    "def _step5a(self, word):\n",
+    "    \"\"\"  \"\"\"\n",
+    "    rules = [('e', '', lambda stem: self._measure(stem) > 1), ('e', '', lambda stem: self._measure(stem) == 1 and (not self._ends_cvc(stem)))]\n",
+    "    return self._apply_rule_list(word, rules)\n",
+    "\n",
     "def _step5b(self, word):\n",
     "    \"\"\"  \"\"\"\n",
     "    rules = [('ll', 'l', lambda stem: self._measure(word[:-1]) > 1)]\n",
-    "    return self._apply_rule_list(word, rules)\n",
-    "\n",
-    "def _cv_sequence(self, stem):\n",
-    "    return ''.join(['c' if self._is_consonant(stem, i) else 'v' for i, l in enumerate(stem)])\n",
-    "\n",
-    "def _step3(self, word):\n",
-    "    \"\"\"  \"\"\"\n",
-    "    rules = [('icate', 'ic', self._has_positive_measure), ('ative', '', self._has_positive_measure), ('alize', 'al', self._has_positive_measure), ('iciti', 'ic', self._has_positive_measure), ('ical', 'ic', self._has_positive_measure), ('ful', '', self._has_positive_measure), ('ness', '', self._has_positive_measure)]\n",
     "    return self._apply_rule_list(word, rules)\n",
     "\n",
     "def _step2(self, word):\n",
@@ -275,14 +267,22 @@
     "    rules = [('ational', 'ate', self._has_positive_measure), ('tional', 'tion', self._has_positive_measure), ('enci', 'ence', self._has_positive_measure), ('anci', 'ance', self._has_positive_measure), ('izer', 'ize', self._has_positive_measure), ('abli', 'able', self._has_positive_measure), ('alli', 'al', self._has_positive_measure), ('entli', 'ent', self._has_positive_measure), ('eli', 'e', self._has_positive_measure), ('ousli', 'ous', self._has_positive_measure), ('ization', 'ize', self._has_positive_measure), ('ation', 'ate', self._has_positive_measure), ('ator', 'ate', self._has_positive_measure), ('alism', 'al', self._has_positive_measure), ('iveness', 'ive', self._has_positive_measure), ('fulness', 'ful', self._has_positive_measure), ('ousness', 'ous', self._has_positive_measure), ('aliti', 'al', self._has_positive_measure), ('iviti', 'ive', self._has_positive_measure), ('biliti', 'ble', self._has_positive_measure)]\n",
     "    return self._apply_rule_list(word, rules)\n",
     "\n",
-    "def _step1a(self, word):\n",
-    "    rules = [('sses', 'ss', None), ('ies', 'i', None), ('ss', 'ss', None), ('s', '', None)]\n",
+    "def _step3(self, word):\n",
+    "    \"\"\"  \"\"\"\n",
+    "    rules = [('icate', 'ic', self._has_positive_measure), ('ative', '', self._has_positive_measure), ('alize', 'al', self._has_positive_measure), ('iciti', 'ic', self._has_positive_measure), ('ical', 'ic', self._has_positive_measure), ('ful', '', self._has_positive_measure), ('ness', '', self._has_positive_measure)]\n",
     "    return self._apply_rule_list(word, rules)\n",
     "\n",
-    "def _step5a(self, word):\n",
-    "    \"\"\"  \"\"\"\n",
-    "    rules = [('e', '', lambda stem: self._measure(stem) > 1), ('e', '', lambda stem: self._measure(stem) == 1 and (not self._ends_cvc(stem)))]\n",
-    "    return self._apply_rule_list(word, rules)"
+    "def stem(self, word, to_lowercase=True):\n",
+    "    stem = word.lower() if to_lowercase else word\n",
+    "    stem = self._step1a(stem)\n",
+    "    stem = self._step1b(stem)\n",
+    "    stem = self._step1c(stem)\n",
+    "    stem = self._step2(stem)\n",
+    "    stem = self._step3(stem)\n",
+    "    stem = self._step4(stem)\n",
+    "    stem = self._step5a(stem)\n",
+    "    stem = self._step5b(stem)\n",
+    "    return stem"
    ]
   },
   {
