--- a/notebooks/standalone/stemming_lemmatization_basics_standalone.ipynb
+++ b/notebooks/standalone/stemming_lemmatization_basics_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7351540b",
+   "id": "44128f16",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d7aa228",
+   "id": "8c34c976",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b86f578f",
+   "id": "1c6d3dbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.libimports.stemlem  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "from nltk import word_tokenize\n",
+    "import spacy\n",
+    "from nltk import pos_tag\n",
+    "import json\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "import nltk\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from nltk.stem.lancaster import LancasterStemmer\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "import string\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9af56ac1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.utils.data.files  ==\n",
     "\n",
     "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
     "import zipfile, tarfile\n",
+    "import bz2\n",
     "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
     "\n",
     "# === Embedded configs ===\n",
     "CONFIG = yaml.safe_load(\"\"\"urls:\n",
@@ -52,14 +79,6 @@
     "    \"\"\")\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
     "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
     "    file_name = url.split('/')[-1]\n",
     "    create_folder(download_path)\n",
@@ -84,47 +103,28 @@
     "        return (None, None)\n",
     "    return (file_path, download_path)\n",
     "\n",
+    "def create_folder(folder_name, exist_ok=True):\n",
+    "    try:\n",
+    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
+    "        return folder_name\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
+    "\n",
     "def is_html_file(content):\n",
     "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
     "    if content.startswith('<!doctype html') is True:\n",
     "        return True\n",
     "    elif content.startswith('<html') is True:\n",
     "        return True\n",
-    "    return False\n",
-    "\n",
-    "def create_folder(folder_name, exist_ok=True):\n",
-    "    try:\n",
-    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
-    "        return folder_name\n",
-    "    except:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df9dcded",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.libimports.stemlem  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import json\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "from nltk import word_tokenize\n",
-    "from nltk import pos_tag\n",
-    "import string\n",
-    "import spacy\n",
-    "import nltk\n",
-    "from nltk.stem.snowball import SnowballStemmer\n",
-    "from nltk.stem.porter import PorterStemmer\n",
-    "from nltk.stem.lancaster import LancasterStemmer\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n"
+    "    return False"
    ]
   },
   {
