--- a/notebooks/standalone/text_classification_rnn_standalone.ipynb
+++ b/notebooks/standalone/text_classification_rnn_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "77d0f51b",
+   "id": "2b639d5c",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3acb377",
+   "id": "2fe33b57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,132 +30,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e37077c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.compute.gpu  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import random\n",
-    "import torch\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def select_device(force_cpu=False, required_memory_gb=None):\n",
-    "    if force_cpu == True:\n",
-    "        return torch.device('cpu')\n",
-    "    candidate_gpus = []\n",
-    "    for i in range(torch.cuda.device_count()):\n",
-    "        free, total = torch.cuda.mem_get_info(device=i)\n",
-    "        if required_memory_gb is None or free / (1024 * 1024 * 1024) > required_memory_gb:\n",
-    "            candidate_gpus.append((i, free))\n",
-    "    if len(candidate_gpus) == 0:\n",
-    "        return torch.device('cpu')\n",
-    "    else:\n",
-    "        device = torch.cuda.device(random.choice(candidate_gpus)[0])\n",
-    "        return torch.device(f'cuda:{device.idx}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90757787",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.data.files  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
-    "import zipfile, tarfile\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "CONFIG = yaml.safe_load(\"\"\"urls:\n",
-    "  downloads:\n",
-    "    notebooks: \"https://github.com/chrisvdweth/selene/tree/master/notebooks\"\n",
-    "    datasets: \"https://chrisvdw.net/projects/selene/downloads/datasets/\"\n",
-    "    models: \"https://chrisvdw.net/projects/selene/downloads/models/\"\n",
-    "    \"\"\")\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
-    "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
-    "    file_name = url.split('/')[-1]\n",
-    "    create_folder(download_path)\n",
-    "    file_path = download_path + file_name\n",
-    "    if os.path.isfile(file_path) == True and overwrite is not True:\n",
-    "        print(f\"File '{file_path}' already exists (use 'overwrite=True' to overwrite it).\")\n",
-    "        return (file_path, download_path)\n",
-    "    response = requests.get(url, stream=True)\n",
-    "    total_size_in_bytes = int(response.headers.get('content-length', 0))\n",
-    "    block_size = 1024\n",
-    "    progress_bar = tqdm(total=total_size_in_bytes, unit='iB', unit_scale=True)\n",
-    "    with open(file_path, 'wb') as file:\n",
-    "        for data in response.iter_content(block_size):\n",
-    "            if ignore_html is True and is_html_file(data) is True:\n",
-    "                print('Error downloading file (expected data file, got HTML file)')\n",
-    "                return (None, None)\n",
-    "            progress_bar.update(len(data))\n",
-    "            file.write(data)\n",
-    "    progress_bar.close()\n",
-    "    if total_size_in_bytes != 0 and progress_bar.n != total_size_in_bytes:\n",
-    "        print('Error downloading file (source does not exist)')\n",
-    "        return (None, None)\n",
-    "    return (file_path, download_path)\n",
-    "\n",
-    "def is_html_file(content):\n",
-    "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
-    "    if content.startswith('<!doctype html') is True:\n",
-    "        return True\n",
-    "    elif content.startswith('<html') is True:\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "def create_folder(folder_name, exist_ok=True):\n",
-    "    try:\n",
-    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
-    "        return folder_name\n",
-    "    except:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d958eba2",
+   "id": "168496ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.text.vectorizing.vocab  ==\n",
     "\n",
     "# === Inlined imports ===\n",
+    "from tqdm import tqdm\n",
     "import numpy as np\n",
     "from collections import Counter\n",
-    "from tqdm import tqdm\n",
     "\n",
     "# === Embedded configs ===\n",
     "\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def __init__(self, vocab):\n",
-    "    self.vocab = vocab\n",
-    "\n",
-    "def encode(self, tokens: list[str]):\n",
-    "    return np.asarray([self.token2index[t] if t in self.token2index else self.default_index for t in tokens])\n",
-    "\n",
     "class Vocabulary:\n",
     "\n",
     "    def __init__(self, tokens, special_tokens: list=[], token_counts=None):\n",
@@ -185,13 +74,92 @@
     "def set_default_index(self, default_index: int):\n",
     "    if default_index >= len(self.index2token):\n",
     "        raise Exception('Invalid default index.')\n",
-    "    self.default_index = default_index"
+    "    self.default_index = default_index\n",
+    "\n",
+    "def __init__(self, vocab):\n",
+    "    self.vocab = vocab\n",
+    "\n",
+    "def encode(self, tokens: list[str]):\n",
+    "    return np.asarray([self.token2index[t] if t in self.token2index else self.default_index for t in tokens])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c5ab899",
+   "id": "db20f246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.data.files  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import zipfile, tarfile\n",
+    "import bz2\n",
+    "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "CONFIG = yaml.safe_load(\"\"\"urls:\n",
+    "  downloads:\n",
+    "    notebooks: \"https://github.com/chrisvdweth/selene/tree/master/notebooks\"\n",
+    "    datasets: \"https://chrisvdw.net/projects/selene/downloads/datasets/\"\n",
+    "    models: \"https://chrisvdw.net/projects/selene/downloads/models/\"\n",
+    "    \"\"\")\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
+    "    file_name = url.split('/')[-1]\n",
+    "    create_folder(download_path)\n",
+    "    file_path = download_path + file_name\n",
+    "    if os.path.isfile(file_path) == True and overwrite is not True:\n",
+    "        print(f\"File '{file_path}' already exists (use 'overwrite=True' to overwrite it).\")\n",
+    "        return (file_path, download_path)\n",
+    "    response = requests.get(url, stream=True)\n",
+    "    total_size_in_bytes = int(response.headers.get('content-length', 0))\n",
+    "    block_size = 1024\n",
+    "    progress_bar = tqdm(total=total_size_in_bytes, unit='iB', unit_scale=True)\n",
+    "    with open(file_path, 'wb') as file:\n",
+    "        for data in response.iter_content(block_size):\n",
+    "            if ignore_html is True and is_html_file(data) is True:\n",
+    "                print('Error downloading file (expected data file, got HTML file)')\n",
+    "                return (None, None)\n",
+    "            progress_bar.update(len(data))\n",
+    "            file.write(data)\n",
+    "    progress_bar.close()\n",
+    "    if total_size_in_bytes != 0 and progress_bar.n != total_size_in_bytes:\n",
+    "        print('Error downloading file (source does not exist)')\n",
+    "        return (None, None)\n",
+    "    return (file_path, download_path)\n",
+    "\n",
+    "def create_folder(folder_name, exist_ok=True):\n",
+    "    try:\n",
+    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
+    "        return folder_name\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
+    "\n",
+    "def is_html_file(content):\n",
+    "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
+    "    if content.startswith('<!doctype html') is True:\n",
+    "        return True\n",
+    "    elif content.startswith('<html') is True:\n",
+    "        return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ea26649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,30 +194,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23283ccb",
+   "id": "12fa6341",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.utils.libimports.rnntextclass  ==\n",
     "\n",
     "# === Inlined imports ===\n",
-    "import torch\n",
-    "import torch.nn.functional as F\n",
-    "from collections import Counter\n",
-    "from torch.utils.data import Dataset, DataLoader, TensorDataset\n",
+    "import numpy as np\n",
     "import spacy\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import torch.nn as nn\n",
-    "from sklearn.metrics import f1_score\n",
+    "import torch.nn.functional as F\n",
     "from torch.nn.utils.rnn import pad_sequence, pack_padded_sequence\n",
+    "from collections import Counter\n",
+    "from sklearn.metrics import f1_score\n",
+    "import torch\n",
     "from tqdm import tqdm\n",
+    "from torch.utils.data import Dataset, DataLoader, TensorDataset\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# === Embedded configs ===\n",
     "\n",
     "\n",
     "# === Inlined definitions ===\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bb57be1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.compute.gpu  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import torch\n",
+    "import random\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def select_device(force_cpu=False, required_memory_gb=None):\n",
+    "    if force_cpu == True:\n",
+    "        return torch.device('cpu')\n",
+    "    candidate_gpus = []\n",
+    "    for i in range(torch.cuda.device_count()):\n",
+    "        free, total = torch.cuda.mem_get_info(device=i)\n",
+    "        if required_memory_gb is None or free / (1024 * 1024 * 1024) > required_memory_gb:\n",
+    "            candidate_gpus.append((i, free))\n",
+    "    if len(candidate_gpus) == 0:\n",
+    "        return torch.device('cpu')\n",
+    "    else:\n",
+    "        device = torch.cuda.device(random.choice(candidate_gpus)[0])\n",
+    "        return torch.device(f'cuda:{device.idx}')"
    ]
   },
   {
