--- a/notebooks/standalone/transformers_basic_architecture_standalone.ipynb
+++ b/notebooks/standalone/transformers_basic_architecture_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "57d25da8",
+   "id": "414cdf8f",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c0e3768",
+   "id": "2eee94cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39e31d7b",
+   "id": "0062c20e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,31 +39,43 @@
     "# === Inlined imports ===\n",
     "import torch\n",
     "import math\n",
-    "import torch.nn as nn\n",
     "import torch.nn.functional as f\n",
+    "import torch.nn as nn\n",
     "\n",
     "# === Embedded configs ===\n",
     "\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def __init__(self, num_encoder_layers=6, num_decoder_layers=6, model_size=512, num_heads=8, ff_hidden_size=2048, dropout=0.1):\n",
-    "    super().__init__()\n",
-    "    self.encoder = TransformerEncoder(num_layers=num_encoder_layers, model_size=model_size, num_heads=num_heads, ff_hidden_size=ff_hidden_size, dropout=dropout)\n",
-    "    self.decoder = TransformerDecoder(num_layers=num_decoder_layers, model_size=model_size, num_heads=num_heads, ff_hidden_size=ff_hidden_size, dropout=dropout)\n",
+    "class TransformerEncoderLayer(nn.Module):\n",
     "\n",
-    "class Attention(nn.Module):\n",
-    "\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, model_size, num_heads, ff_hidden_size, dropout):\n",
     "        super().__init__()\n",
+    "        self.mha1 = MultiHeadAttention(model_size, num_heads)\n",
+    "        self.dropout1 = nn.Dropout(dropout)\n",
+    "        self.norm1 = nn.LayerNorm(model_size)\n",
+    "        self.ff = FeedForward(model_size, ff_hidden_size)\n",
+    "        self.dropout2 = nn.Dropout(dropout)\n",
+    "        self.norm2 = nn.LayerNorm(model_size)\n",
     "\n",
-    "    def forward(self, Q, K, V, mask=None, dropout=None):\n",
-    "        out = torch.matmul(Q, K.transpose(1, 2))\n",
-    "        out = out / Q.shape[-1] ** 0.5\n",
-    "        out = f.softmax(out, dim=-1)\n",
-    "        if dropout is not None:\n",
-    "            out = nn.Dropout(out, dropout)\n",
-    "        out = torch.matmul(out, V)\n",
-    "        return out\n",
+    "    def forward(self, source):\n",
+    "        out1 = self.mha1(source, source, source)\n",
+    "        out1 = self.dropout1(out1)\n",
+    "        out1 = self.norm1(out1 + source)\n",
+    "        out2 = self.ff(out1)\n",
+    "        out2 = self.dropout2(out2)\n",
+    "        out2 = self.norm2(out2 + out1)\n",
+    "        return out2\n",
+    "\n",
+    "class TransformerDecoder(nn.Module):\n",
+    "\n",
+    "    def __init__(self, num_layers=6, model_size=512, num_heads=8, ff_hidden_size=2048, dropout=0.1):\n",
+    "        super().__init__()\n",
+    "        self.layers = nn.ModuleList([TransformerDecoderLayer(model_size, num_heads, ff_hidden_size, dropout) for _ in range(num_layers)])\n",
+    "\n",
+    "    def forward(self, target, memory):\n",
+    "        for l in self.layers:\n",
+    "            target = l(target, memory)\n",
+    "        return target\n",
     "\n",
     "class AttentionHead(nn.Module):\n",
     "\n",
@@ -82,6 +94,75 @@
     "\n",
     "    def forward(self, query, key, value):\n",
     "        return self.attention(self.Wq(query), self.Wk(key), self.Wv(value))\n",
+    "\n",
+    "def __init__(self, num_encoder_layers=6, num_decoder_layers=6, model_size=512, num_heads=8, ff_hidden_size=2048, dropout=0.1):\n",
+    "    super().__init__()\n",
+    "    self.encoder = TransformerEncoder(num_layers=num_encoder_layers, model_size=model_size, num_heads=num_heads, ff_hidden_size=ff_hidden_size, dropout=dropout)\n",
+    "    self.decoder = TransformerDecoder(num_layers=num_decoder_layers, model_size=model_size, num_heads=num_heads, ff_hidden_size=ff_hidden_size, dropout=dropout)\n",
+    "\n",
+    "class FeedForward(nn.Module):\n",
+    "\n",
+    "    def __init__(self, model_size, hidden_size=2048):\n",
+    "        super().__init__()\n",
+    "        self.net = nn.Sequential(nn.Linear(model_size, hidden_size), nn.ReLU(), nn.Linear(hidden_size, model_size))\n",
+    "\n",
+    "    def forward(self, X):\n",
+    "        return self.net(X)\n",
+    "\n",
+    "class Attention(nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def forward(self, Q, K, V, mask=None, dropout=None):\n",
+    "        out = torch.matmul(Q, K.transpose(1, 2))\n",
+    "        out = out / Q.shape[-1] ** 0.5\n",
+    "        out = f.softmax(out, dim=-1)\n",
+    "        if dropout is not None:\n",
+    "            out = nn.Dropout(out, dropout)\n",
+    "        out = torch.matmul(out, V)\n",
+    "        return out\n",
+    "\n",
+    "class Transformer(nn.Module):\n",
+    "\n",
+    "    def __init__(self, num_encoder_layers=6, num_decoder_layers=6, model_size=512, num_heads=8, ff_hidden_size=2048, dropout=0.1):\n",
+    "        super().__init__()\n",
+    "        self.encoder = TransformerEncoder(num_layers=num_encoder_layers, model_size=model_size, num_heads=num_heads, ff_hidden_size=ff_hidden_size, dropout=dropout)\n",
+    "        self.decoder = TransformerDecoder(num_layers=num_decoder_layers, model_size=model_size, num_heads=num_heads, ff_hidden_size=ff_hidden_size, dropout=dropout)\n",
+    "\n",
+    "    def forward(self, source, target):\n",
+    "        memory = self.encoder(source)\n",
+    "        return self.decoder(target, memory)\n",
+    "\n",
+    "class MultiHeadAttention(nn.Module):\n",
+    "\n",
+    "    def __init__(self, model_size, num_heads):\n",
+    "        super().__init__()\n",
+    "        if model_size % num_heads != 0:\n",
+    "            raise Exception('The model size must be divisible by the number of heads!')\n",
+    "        self.qkv_size = model_size // num_heads\n",
+    "        self.heads = nn.ModuleList([AttentionHead(model_size, self.qkv_size) for _ in range(num_heads)])\n",
+    "        self.Wo = nn.Linear(model_size, model_size)\n",
+    "        self._init_parameters()\n",
+    "\n",
+    "    def _init_parameters(self):\n",
+    "        nn.init.xavier_uniform_(self.Wo.weight)\n",
+    "\n",
+    "    def forward(self, query, key, value):\n",
+    "        out_heads = tuple([attention_head(query, key, value) for attention_head in self.heads])\n",
+    "        out = torch.cat(out_heads, dim=-1)\n",
+    "        return self.Wo(out)\n",
+    "\n",
+    "class TransformerEncoder(nn.Module):\n",
+    "\n",
+    "    def __init__(self, num_layers=6, model_size=512, num_heads=8, ff_hidden_size=2048, dropout=0.1):\n",
+    "        super().__init__()\n",
+    "        self.layers = nn.ModuleList([TransformerEncoderLayer(model_size, num_heads, ff_hidden_size, dropout) for _ in range(num_layers)])\n",
+    "\n",
+    "    def forward(self, source):\n",
+    "        for l in self.layers:\n",
+    "            source = l(source)\n",
+    "        return source\n",
     "\n",
     "class TransformerDecoderLayer(nn.Module):\n",
     "\n",
@@ -107,88 +188,7 @@
     "        out3 = self.ff(out2)\n",
     "        out3 = self.dropout3(out3)\n",
     "        out3 = self.norm3(out3 + out2)\n",
-    "        return out3\n",
-    "\n",
-    "class TransformerDecoder(nn.Module):\n",
-    "\n",
-    "    def __init__(self, num_layers=6, model_size=512, num_heads=8, ff_hidden_size=2048, dropout=0.1):\n",
-    "        super().__init__()\n",
-    "        self.layers = nn.ModuleList([TransformerDecoderLayer(model_size, num_heads, ff_hidden_size, dropout) for _ in range(num_layers)])\n",
-    "\n",
-    "    def forward(self, target, memory):\n",
-    "        for l in self.layers:\n",
-    "            target = l(target, memory)\n",
-    "        return target\n",
-    "\n",
-    "class MultiHeadAttention(nn.Module):\n",
-    "\n",
-    "    def __init__(self, model_size, num_heads):\n",
-    "        super().__init__()\n",
-    "        if model_size % num_heads != 0:\n",
-    "            raise Exception('The model size must be divisible by the number of heads!')\n",
-    "        self.qkv_size = model_size // num_heads\n",
-    "        self.heads = nn.ModuleList([AttentionHead(model_size, self.qkv_size) for _ in range(num_heads)])\n",
-    "        self.Wo = nn.Linear(model_size, model_size)\n",
-    "        self._init_parameters()\n",
-    "\n",
-    "    def _init_parameters(self):\n",
-    "        nn.init.xavier_uniform_(self.Wo.weight)\n",
-    "\n",
-    "    def forward(self, query, key, value):\n",
-    "        out_heads = tuple([attention_head(query, key, value) for attention_head in self.heads])\n",
-    "        out = torch.cat(out_heads, dim=-1)\n",
-    "        return self.Wo(out)\n",
-    "\n",
-    "class TransformerEncoderLayer(nn.Module):\n",
-    "\n",
-    "    def __init__(self, model_size, num_heads, ff_hidden_size, dropout):\n",
-    "        super().__init__()\n",
-    "        self.mha1 = MultiHeadAttention(model_size, num_heads)\n",
-    "        self.dropout1 = nn.Dropout(dropout)\n",
-    "        self.norm1 = nn.LayerNorm(model_size)\n",
-    "        self.ff = FeedForward(model_size, ff_hidden_size)\n",
-    "        self.dropout2 = nn.Dropout(dropout)\n",
-    "        self.norm2 = nn.LayerNorm(model_size)\n",
-    "\n",
-    "    def forward(self, source):\n",
-    "        out1 = self.mha1(source, source, source)\n",
-    "        out1 = self.dropout1(out1)\n",
-    "        out1 = self.norm1(out1 + source)\n",
-    "        out2 = self.ff(out1)\n",
-    "        out2 = self.dropout2(out2)\n",
-    "        out2 = self.norm2(out2 + out1)\n",
-    "        return out2\n",
-    "\n",
-    "class TransformerEncoder(nn.Module):\n",
-    "\n",
-    "    def __init__(self, num_layers=6, model_size=512, num_heads=8, ff_hidden_size=2048, dropout=0.1):\n",
-    "        super().__init__()\n",
-    "        self.layers = nn.ModuleList([TransformerEncoderLayer(model_size, num_heads, ff_hidden_size, dropout) for _ in range(num_layers)])\n",
-    "\n",
-    "    def forward(self, source):\n",
-    "        for l in self.layers:\n",
-    "            source = l(source)\n",
-    "        return source\n",
-    "\n",
-    "class Transformer(nn.Module):\n",
-    "\n",
-    "    def __init__(self, num_encoder_layers=6, num_decoder_layers=6, model_size=512, num_heads=8, ff_hidden_size=2048, dropout=0.1):\n",
-    "        super().__init__()\n",
-    "        self.encoder = TransformerEncoder(num_layers=num_encoder_layers, model_size=model_size, num_heads=num_heads, ff_hidden_size=ff_hidden_size, dropout=dropout)\n",
-    "        self.decoder = TransformerDecoder(num_layers=num_decoder_layers, model_size=model_size, num_heads=num_heads, ff_hidden_size=ff_hidden_size, dropout=dropout)\n",
-    "\n",
-    "    def forward(self, source, target):\n",
-    "        memory = self.encoder(source)\n",
-    "        return self.decoder(target, memory)\n",
-    "\n",
-    "class FeedForward(nn.Module):\n",
-    "\n",
-    "    def __init__(self, model_size, hidden_size=2048):\n",
-    "        super().__init__()\n",
-    "        self.net = nn.Sequential(nn.Linear(model_size, hidden_size), nn.ReLU(), nn.Linear(hidden_size, model_size))\n",
-    "\n",
-    "    def forward(self, X):\n",
-    "        return self.net(X)"
+    "        return out3"
    ]
   },
   {
