--- a/notebooks/standalone/bias_variance_ml_basics_standalone.ipynb
+++ b/notebooks/standalone/bias_variance_ml_basics_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f906a6ca",
+   "id": "b12e01fe",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1560add",
+   "id": "aaec57cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,80 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0c1c237",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.data.files  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
-    "import zipfile, tarfile\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "CONFIG = yaml.safe_load(\"\"\"urls:\n",
-    "  downloads:\n",
-    "    notebooks: \"https://github.com/chrisvdweth/selene/tree/master/notebooks\"\n",
-    "    datasets: \"https://chrisvdw.net/projects/selene/downloads/datasets/\"\n",
-    "    models: \"https://chrisvdw.net/projects/selene/downloads/models/\"\n",
-    "    \"\"\")\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
-    "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
-    "    file_name = url.split('/')[-1]\n",
-    "    create_folder(download_path)\n",
-    "    file_path = download_path + file_name\n",
-    "    if os.path.isfile(file_path) == True and overwrite is not True:\n",
-    "        print(f\"File '{file_path}' already exists (use 'overwrite=True' to overwrite it).\")\n",
-    "        return (file_path, download_path)\n",
-    "    response = requests.get(url, stream=True)\n",
-    "    total_size_in_bytes = int(response.headers.get('content-length', 0))\n",
-    "    block_size = 1024\n",
-    "    progress_bar = tqdm(total=total_size_in_bytes, unit='iB', unit_scale=True)\n",
-    "    with open(file_path, 'wb') as file:\n",
-    "        for data in response.iter_content(block_size):\n",
-    "            if ignore_html is True and is_html_file(data) is True:\n",
-    "                print('Error downloading file (expected data file, got HTML file)')\n",
-    "                return (None, None)\n",
-    "            progress_bar.update(len(data))\n",
-    "            file.write(data)\n",
-    "    progress_bar.close()\n",
-    "    if total_size_in_bytes != 0 and progress_bar.n != total_size_in_bytes:\n",
-    "        print('Error downloading file (source does not exist)')\n",
-    "        return (None, None)\n",
-    "    return (file_path, download_path)\n",
-    "\n",
-    "def is_html_file(content):\n",
-    "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
-    "    if content.startswith('<!doctype html') is True:\n",
-    "        return True\n",
-    "    elif content.startswith('<html') is True:\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "def create_folder(folder_name, exist_ok=True):\n",
-    "    try:\n",
-    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
-    "        return folder_name\n",
-    "    except:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5193706b",
+   "id": "490b4b69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "559343d1",
+   "id": "cf84f9ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,9 +57,9 @@
     "\n",
     "# === Inlined imports ===\n",
     "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "# === Embedded configs ===\n",
     "\n",
@@ -226,6 +153,79 @@
     "    plt.tick_params(top=False, bottom=False, left=False, right=False, labelleft=False, labelbottom=False)\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0899feb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.data.files  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import zipfile, tarfile\n",
+    "import bz2\n",
+    "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "CONFIG = yaml.safe_load(\"\"\"urls:\n",
+    "  downloads:\n",
+    "    notebooks: \"https://github.com/chrisvdweth/selene/tree/master/notebooks\"\n",
+    "    datasets: \"https://chrisvdw.net/projects/selene/downloads/datasets/\"\n",
+    "    models: \"https://chrisvdw.net/projects/selene/downloads/models/\"\n",
+    "    \"\"\")\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
+    "    file_name = url.split('/')[-1]\n",
+    "    create_folder(download_path)\n",
+    "    file_path = download_path + file_name\n",
+    "    if os.path.isfile(file_path) == True and overwrite is not True:\n",
+    "        print(f\"File '{file_path}' already exists (use 'overwrite=True' to overwrite it).\")\n",
+    "        return (file_path, download_path)\n",
+    "    response = requests.get(url, stream=True)\n",
+    "    total_size_in_bytes = int(response.headers.get('content-length', 0))\n",
+    "    block_size = 1024\n",
+    "    progress_bar = tqdm(total=total_size_in_bytes, unit='iB', unit_scale=True)\n",
+    "    with open(file_path, 'wb') as file:\n",
+    "        for data in response.iter_content(block_size):\n",
+    "            if ignore_html is True and is_html_file(data) is True:\n",
+    "                print('Error downloading file (expected data file, got HTML file)')\n",
+    "                return (None, None)\n",
+    "            progress_bar.update(len(data))\n",
+    "            file.write(data)\n",
+    "    progress_bar.close()\n",
+    "    if total_size_in_bytes != 0 and progress_bar.n != total_size_in_bytes:\n",
+    "        print('Error downloading file (source does not exist)')\n",
+    "        return (None, None)\n",
+    "    return (file_path, download_path)\n",
+    "\n",
+    "def create_folder(folder_name, exist_ok=True):\n",
+    "    try:\n",
+    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
+    "        return folder_name\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
+    "\n",
+    "def is_html_file(content):\n",
+    "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
+    "    if content.startswith('<!doctype html') is True:\n",
+    "        return True\n",
+    "    elif content.startswith('<html') is True:\n",
+    "        return True\n",
+    "    return False"
    ]
   },
   {
