--- a/notebooks/standalone/handwritten_digit_recognition_ann_standalone.ipynb
+++ b/notebooks/standalone/handwritten_digit_recognition_ann_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb3b652c",
+   "id": "b7730b01",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c1ddbe0",
+   "id": "152ad878",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,109 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b53deaac",
+   "id": "d01086e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.plotting.nn  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def plot_training_results(results, legend, normalize=True, fontsize=14):\n",
+    "    results = np.asarray(results)\n",
+    "    plt.figure()\n",
+    "    x = list(range(1, len(results) + 1))\n",
+    "    for idx in range(results.shape[1]):\n",
+    "        y = results[:, idx]\n",
+    "        if normalize == True and np.max(y) > 1:\n",
+    "            y = y / np.max(y)\n",
+    "        plt.plot(x, y, lw=3)\n",
+    "    plt.gca().set_xticks(x)\n",
+    "    plt.xticks(fontsize=fontsize)\n",
+    "    plt.yticks(fontsize=fontsize)\n",
+    "    plt.xlabel('Epoch', fontsize=fontsize)\n",
+    "    plt.legend(legend, loc='lower left', fontsize=fontsize)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2874aee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.compute.gpu  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import torch\n",
+    "import random\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def select_device(force_cpu=False, required_memory_gb=None):\n",
+    "    if force_cpu == True:\n",
+    "        return torch.device('cpu')\n",
+    "    candidate_gpus = []\n",
+    "    for i in range(torch.cuda.device_count()):\n",
+    "        free, total = torch.cuda.mem_get_info(device=i)\n",
+    "        if required_memory_gb is None or free / (1024 * 1024 * 1024) > required_memory_gb:\n",
+    "            candidate_gpus.append((i, free))\n",
+    "    if len(candidate_gpus) == 0:\n",
+    "        return torch.device('cpu')\n",
+    "    else:\n",
+    "        device = torch.cuda.device(random.choice(candidate_gpus)[0])\n",
+    "        return torch.device(f'cuda:{device.idx}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bc98d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.libimports.mnistann  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import numpy as np\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "import torch.nn as nn\n",
+    "from sklearn.metrics import f1_score\n",
+    "from tqdm import tqdm\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36bf612c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.utils.data.files  ==\n",
     "\n",
     "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
     "import zipfile, tarfile\n",
+    "import bz2\n",
     "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
     "\n",
     "# === Embedded configs ===\n",
     "CONFIG = yaml.safe_load(\"\"\"urls:\n",
@@ -52,14 +143,6 @@
     "    \"\"\")\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
     "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
     "    file_name = url.split('/')[-1]\n",
     "    create_folder(download_path)\n",
@@ -126,98 +209,15 @@
     "        with open(output_file_name, 'wb') as output_file, bz2.BZ2File(file_name, 'rb') as file:\n",
     "            for data in iter(lambda: file.read(100 * 1024), b''):\n",
     "                output_file.write(data)\n",
-    "        return output_file_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5192b827",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.libimports.mnistann  ==\n",
+    "        return output_file_name\n",
     "\n",
-    "# === Inlined imports ===\n",
-    "import torch\n",
-    "import matplotlib.pyplot as plt\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
-    "import numpy as np\n",
-    "import torch.nn as nn\n",
-    "from sklearn.metrics import f1_score\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "309c2a28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.plotting.nn  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def plot_training_results(results, legend, normalize=True, fontsize=14):\n",
-    "    results = np.asarray(results)\n",
-    "    plt.figure()\n",
-    "    x = list(range(1, len(results) + 1))\n",
-    "    for idx in range(results.shape[1]):\n",
-    "        y = results[:, idx]\n",
-    "        if normalize == True and np.max(y) > 1:\n",
-    "            y = y / np.max(y)\n",
-    "        plt.plot(x, y, lw=3)\n",
-    "    plt.gca().set_xticks(x)\n",
-    "    plt.xticks(fontsize=fontsize)\n",
-    "    plt.yticks(fontsize=fontsize)\n",
-    "    plt.xlabel('Epoch', fontsize=fontsize)\n",
-    "    plt.legend(legend, loc='lower left', fontsize=fontsize)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a74775d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.compute.gpu  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import random\n",
-    "import torch\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def select_device(force_cpu=False, required_memory_gb=None):\n",
-    "    if force_cpu == True:\n",
-    "        return torch.device('cpu')\n",
-    "    candidate_gpus = []\n",
-    "    for i in range(torch.cuda.device_count()):\n",
-    "        free, total = torch.cuda.mem_get_info(device=i)\n",
-    "        if required_memory_gb is None or free / (1024 * 1024 * 1024) > required_memory_gb:\n",
-    "            candidate_gpus.append((i, free))\n",
-    "    if len(candidate_gpus) == 0:\n",
-    "        return torch.device('cpu')\n",
-    "    else:\n",
-    "        device = torch.cuda.device(random.choice(candidate_gpus)[0])\n",
-    "        return torch.device(f'cuda:{device.idx}')"
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)"
    ]
   },
   {
