--- a/notebooks/standalone/linear_regression_assumptions_caveats_standalone.ipynb
+++ b/notebooks/standalone/linear_regression_assumptions_caveats_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5509268e",
+   "id": "8b1120c5",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ea5212c",
+   "id": "fd511de0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,87 +30,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a43426ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.plotting.linreg  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from matplotlib import cm\n",
-    "import seaborn as sns\n",
-    "from itertools import cycle\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def plot_anscombes_quartet(datasets, show_regression_line=False):\n",
-    "    fig, axs = plt.subplots(2, 2, sharex=True, sharey=True, figsize=(10, 10))\n",
-    "    axs[0, 0].set(xlim=(0, 20), ylim=(2, 14))\n",
-    "    axs[0, 0].set(xticks=(0, 10, 20), yticks=(4, 8, 12))\n",
-    "    for ax, (label, (x, y)) in zip(axs.flat, datasets.items()):\n",
-    "        ax.text(0.1, 0.9, label, fontsize=20, transform=ax.transAxes, va='top')\n",
-    "        ax.tick_params(direction='in', top=True, right=True)\n",
-    "        ax.plot(x, y, 'o')\n",
-    "        if show_regression_line == True:\n",
-    "            w1, w0 = np.polyfit(x, y, deg=1)\n",
-    "            ax.axline(xy1=(0, w0), slope=w1, color='r', lw=2)\n",
-    "        stats = f'$\\\\mu$ = {np.mean(y):.2f}\\n$\\\\sigma$ = {np.std(y):.2f}\\n$r$ = {np.corrcoef(x, y)[0][1]:.2f}'\n",
-    "        bbox = dict(boxstyle='round', fc='blanchedalmond', ec='orange', alpha=0.5)\n",
-    "        ax.text(0.95, 0.07, stats, fontsize=9, bbox=bbox, transform=ax.transAxes, horizontalalignment='right')\n",
-    "    plt.show()\n",
-    "\n",
-    "def plot_correlation_matrix(correlation_matrix, cmap='coolwarm', font_size=12):\n",
-    "    plt.figure()\n",
-    "    with plt.style.context({'axes.labelsize': 12, 'xtick.labelsize': font_size, 'ytick.labelsize': font_size}):\n",
-    "        ax = sns.heatmap(correlation_matrix, cmap='coolwarm', vmin=-1.0, vmax=1.0, square=True, annot=True, annot_kws={'size': font_size})\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ba3e9c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.libimports.linreg  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import scipy.stats as stats\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import r2_score, root_mean_squared_error\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "import statsmodels.api as sm\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f263b71",
+   "id": "668cb6e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.utils.data.files  ==\n",
     "\n",
     "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
     "import zipfile, tarfile\n",
+    "import bz2\n",
     "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
     "\n",
     "# === Embedded configs ===\n",
     "CONFIG = yaml.safe_load(\"\"\"urls:\n",
@@ -121,14 +52,6 @@
     "    \"\"\")\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
     "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
     "    file_name = url.split('/')[-1]\n",
     "    create_folder(download_path)\n",
@@ -153,20 +76,97 @@
     "        return (None, None)\n",
     "    return (file_path, download_path)\n",
     "\n",
+    "def create_folder(folder_name, exist_ok=True):\n",
+    "    try:\n",
+    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
+    "        return folder_name\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
+    "\n",
     "def is_html_file(content):\n",
     "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
     "    if content.startswith('<!doctype html') is True:\n",
     "        return True\n",
     "    elif content.startswith('<html') is True:\n",
     "        return True\n",
-    "    return False\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cc8892f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.libimports.linreg  ==\n",
     "\n",
-    "def create_folder(folder_name, exist_ok=True):\n",
-    "    try:\n",
-    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
-    "        return folder_name\n",
-    "    except:\n",
-    "        return None"
+    "# === Inlined imports ===\n",
+    "from sklearn.metrics import r2_score, root_mean_squared_error\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import scipy.stats as stats\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fe7f18c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.plotting.linreg  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "from matplotlib import cm\n",
+    "from itertools import cycle\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def plot_correlation_matrix(correlation_matrix, cmap='coolwarm', font_size=12):\n",
+    "    plt.figure()\n",
+    "    with plt.style.context({'axes.labelsize': 12, 'xtick.labelsize': font_size, 'ytick.labelsize': font_size}):\n",
+    "        ax = sns.heatmap(correlation_matrix, cmap='coolwarm', vmin=-1.0, vmax=1.0, square=True, annot=True, annot_kws={'size': font_size})\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_anscombes_quartet(datasets, show_regression_line=False):\n",
+    "    fig, axs = plt.subplots(2, 2, sharex=True, sharey=True, figsize=(10, 10))\n",
+    "    axs[0, 0].set(xlim=(0, 20), ylim=(2, 14))\n",
+    "    axs[0, 0].set(xticks=(0, 10, 20), yticks=(4, 8, 12))\n",
+    "    for ax, (label, (x, y)) in zip(axs.flat, datasets.items()):\n",
+    "        ax.text(0.1, 0.9, label, fontsize=20, transform=ax.transAxes, va='top')\n",
+    "        ax.tick_params(direction='in', top=True, right=True)\n",
+    "        ax.plot(x, y, 'o')\n",
+    "        if show_regression_line == True:\n",
+    "            w1, w0 = np.polyfit(x, y, deg=1)\n",
+    "            ax.axline(xy1=(0, w0), slope=w1, color='r', lw=2)\n",
+    "        stats = f'$\\\\mu$ = {np.mean(y):.2f}\\n$\\\\sigma$ = {np.std(y):.2f}\\n$r$ = {np.corrcoef(x, y)[0][1]:.2f}'\n",
+    "        bbox = dict(boxstyle='round', fc='blanchedalmond', ec='orange', alpha=0.5)\n",
+    "        ax.text(0.95, 0.07, stats, fontsize=9, bbox=bbox, transform=ax.transAxes, horizontalalignment='right')\n",
+    "    plt.show()"
    ]
   },
   {
