--- a/notebooks/standalone/linear_regression_math_standalone.ipynb
+++ b/notebooks/standalone/linear_regression_math_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c49a7b4d",
+   "id": "ab7f2c32",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea2a8f5",
+   "id": "53064539",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,102 +30,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adc28c56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.plotting.linreg  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from matplotlib import cm\n",
-    "import seaborn as sns\n",
-    "from itertools import cycle\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def plot_csi_data(X, y, regression_lines=[], show_errors=False):\n",
-    "    plt.figure()\n",
-    "    plt.scatter(X, y, color='blue', alpha=0.6, label='data points')\n",
-    "    for idx, (w, color, label) in enumerate(regression_lines):\n",
-    "        if color is None:\n",
-    "            color = next(color_cycle)\n",
-    "        plt.gca().axline(xy1=(0, w[0]), slope=w[1], color=color, lw=2, label=label)\n",
-    "        regression_line = [w[0] + w[1] * x for x in X]\n",
-    "    if len(regression_lines) > 0 and show_errors is True:\n",
-    "        for i in range(len(X)):\n",
-    "            plt.plot([X[i:i + 1], X[i:i + 1]], [y[i:i + 1], regression_line[i:i + 1]], '--', c='black')\n",
-    "    plt.xlim([X.min() * 0.95, X.max() * 1.05])\n",
-    "    plt.ylim([y.min() * 0.95, y.max() * 1.05])\n",
-    "    plt.legend(loc='lower right')\n",
-    "    plt.xlabel('Shoe Print Size (cm)')\n",
-    "    plt.ylabel('Height (cm)')\n",
-    "    plt.show()\n",
-    "\n",
-    "def plot_huber_loss(deltas=[3], show_mae=False, show_mse=False):\n",
-    "    x = np.linspace(-5, 5, 1000)\n",
-    "    plt.figure()\n",
-    "    for d in deltas:\n",
-    "        y_mse = 0.5 * np.square(x)\n",
-    "        y_mae = d * np.abs(x) - 0.5 * np.square(d)\n",
-    "        mae_range = np.argwhere(np.abs(x) > d)\n",
-    "        mse_range = np.argwhere(np.abs(x) < d)\n",
-    "        y_mae[mse_range] = 0\n",
-    "        y_mse[mae_range] = 0\n",
-    "        y = y_mse + y_mae\n",
-    "        plt.plot(x, y, linewidth=3, label=f'$\\\\delta$={d}')\n",
-    "    if show_mae is True:\n",
-    "        plt.plot(x, np.abs(x), linewidth=3, label='MAE', linestyle='--')\n",
-    "    if show_mse is True:\n",
-    "        plt.plot(x, np.square(x), linewidth=3, label='MSE', linestyle='--')\n",
-    "    plt.legend(loc='upper center')\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b901d53c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.libimports.linreg  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import scipy.stats as stats\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import r2_score, root_mean_squared_error\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "import statsmodels.api as sm\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f30ea7f",
+   "id": "e21ad144",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.utils.data.files  ==\n",
     "\n",
     "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
     "import zipfile, tarfile\n",
+    "import bz2\n",
     "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
     "\n",
     "# === Embedded configs ===\n",
     "CONFIG = yaml.safe_load(\"\"\"urls:\n",
@@ -136,14 +52,6 @@
     "    \"\"\")\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
     "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
     "    file_name = url.split('/')[-1]\n",
     "    create_folder(download_path)\n",
@@ -168,20 +76,112 @@
     "        return (None, None)\n",
     "    return (file_path, download_path)\n",
     "\n",
+    "def create_folder(folder_name, exist_ok=True):\n",
+    "    try:\n",
+    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
+    "        return folder_name\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
+    "\n",
     "def is_html_file(content):\n",
     "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
     "    if content.startswith('<!doctype html') is True:\n",
     "        return True\n",
     "    elif content.startswith('<html') is True:\n",
     "        return True\n",
-    "    return False\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be18db1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.libimports.linreg  ==\n",
     "\n",
-    "def create_folder(folder_name, exist_ok=True):\n",
-    "    try:\n",
-    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
-    "        return folder_name\n",
-    "    except:\n",
-    "        return None"
+    "# === Inlined imports ===\n",
+    "from sklearn.metrics import r2_score, root_mean_squared_error\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import scipy.stats as stats\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "435664cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.plotting.linreg  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "from matplotlib import cm\n",
+    "from itertools import cycle\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def plot_huber_loss(deltas=[3], show_mae=False, show_mse=False):\n",
+    "    x = np.linspace(-5, 5, 1000)\n",
+    "    plt.figure()\n",
+    "    for d in deltas:\n",
+    "        y_mse = 0.5 * np.square(x)\n",
+    "        y_mae = d * np.abs(x) - 0.5 * np.square(d)\n",
+    "        mae_range = np.argwhere(np.abs(x) > d)\n",
+    "        mse_range = np.argwhere(np.abs(x) < d)\n",
+    "        y_mae[mse_range] = 0\n",
+    "        y_mse[mae_range] = 0\n",
+    "        y = y_mse + y_mae\n",
+    "        plt.plot(x, y, linewidth=3, label=f'$\\\\delta$={d}')\n",
+    "    if show_mae is True:\n",
+    "        plt.plot(x, np.abs(x), linewidth=3, label='MAE', linestyle='--')\n",
+    "    if show_mse is True:\n",
+    "        plt.plot(x, np.square(x), linewidth=3, label='MSE', linestyle='--')\n",
+    "    plt.legend(loc='upper center')\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_csi_data(X, y, regression_lines=[], show_errors=False):\n",
+    "    plt.figure()\n",
+    "    plt.scatter(X, y, color='blue', alpha=0.6, label='data points')\n",
+    "    for idx, (w, color, label) in enumerate(regression_lines):\n",
+    "        if color is None:\n",
+    "            color = next(color_cycle)\n",
+    "        plt.gca().axline(xy1=(0, w[0]), slope=w[1], color=color, lw=2, label=label)\n",
+    "        regression_line = [w[0] + w[1] * x for x in X]\n",
+    "    if len(regression_lines) > 0 and show_errors is True:\n",
+    "        for i in range(len(X)):\n",
+    "            plt.plot([X[i:i + 1], X[i:i + 1]], [y[i:i + 1], regression_line[i:i + 1]], '--', c='black')\n",
+    "    plt.xlim([X.min() * 0.95, X.max() * 1.05])\n",
+    "    plt.ylim([y.min() * 0.95, y.max() * 1.05])\n",
+    "    plt.legend(loc='lower right')\n",
+    "    plt.xlabel('Shoe Print Size (cm)')\n",
+    "    plt.ylabel('Height (cm)')\n",
+    "    plt.show()"
    ]
   },
   {
