--- a/notebooks/standalone/retrieval_augmented_generation_rag_basic_example_standalone.ipynb
+++ b/notebooks/standalone/retrieval_augmented_generation_rag_basic_example_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5de5218d",
+   "id": "aa0bd39b",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69719adb",
+   "id": "ac154f12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d24833",
+   "id": "d20f9304",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.utils.data.files  ==\n",
     "\n",
     "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
     "import zipfile, tarfile\n",
+    "import bz2\n",
     "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
     "\n",
     "# === Embedded configs ===\n",
     "CONFIG = yaml.safe_load(\"\"\"urls:\n",
@@ -52,14 +52,6 @@
     "    \"\"\")\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
     "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
     "    file_name = url.split('/')[-1]\n",
     "    create_folder(download_path)\n",
@@ -84,20 +76,28 @@
     "        return (None, None)\n",
     "    return (file_path, download_path)\n",
     "\n",
+    "def create_folder(folder_name, exist_ok=True):\n",
+    "    try:\n",
+    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
+    "        return folder_name\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
+    "\n",
     "def is_html_file(content):\n",
     "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
     "    if content.startswith('<!doctype html') is True:\n",
     "        return True\n",
     "    elif content.startswith('<html') is True:\n",
     "        return True\n",
-    "    return False\n",
-    "\n",
-    "def create_folder(folder_name, exist_ok=True):\n",
-    "    try:\n",
-    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
-    "        return folder_name\n",
-    "    except:\n",
-    "        return None"
+    "    return False"
    ]
   },
   {
