--- a/notebooks/standalone/text_token_indexing_standalone.ipynb
+++ b/notebooks/standalone/text_token_indexing_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "58dccd5a",
+   "id": "09beadd3",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd50acb",
+   "id": "cae1faff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,24 +30,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edc0b4aa",
+   "id": "69b4aacd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.libimports.textidx  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import pickle\n",
+    "from tqdm import tqdm\n",
+    "import spacy\n",
+    "from collections import Counter\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8533a14",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.text.vectorizing.vocab  ==\n",
     "\n",
     "# === Inlined imports ===\n",
+    "from tqdm import tqdm\n",
     "import numpy as np\n",
     "from collections import Counter\n",
-    "from tqdm import tqdm\n",
     "\n",
     "# === Embedded configs ===\n",
     "\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def encode(self, tokens: list[str]):\n",
-    "    return np.asarray([self.token2index[t] if t in self.token2index else self.default_index for t in tokens])\n",
-    "\n",
     "class Vocabulary:\n",
     "\n",
     "    def __init__(self, tokens, special_tokens: list=[], token_counts=None):\n",
@@ -80,24 +98,27 @@
     "    self.default_index = default_index\n",
     "\n",
     "def decode(self, indices: list[int], default_token='[???]'):\n",
-    "    return [self.index2token[i] if int(i) < len(self.index2token) else default_token for i in indices]"
+    "    return [self.index2token[i] if int(i) < len(self.index2token) else default_token for i in indices]\n",
+    "\n",
+    "def encode(self, tokens: list[str]):\n",
+    "    return np.asarray([self.token2index[t] if t in self.token2index else self.default_index for t in tokens])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30b6e301",
+   "id": "b03900e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.utils.data.files  ==\n",
     "\n",
     "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
     "import zipfile, tarfile\n",
+    "import bz2\n",
     "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
     "\n",
     "# === Embedded configs ===\n",
     "CONFIG = yaml.safe_load(\"\"\"urls:\n",
@@ -108,14 +129,6 @@
     "    \"\"\")\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
     "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
     "    file_name = url.split('/')[-1]\n",
     "    create_folder(download_path)\n",
@@ -140,41 +153,28 @@
     "        return (None, None)\n",
     "    return (file_path, download_path)\n",
     "\n",
+    "def create_folder(folder_name, exist_ok=True):\n",
+    "    try:\n",
+    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
+    "        return folder_name\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
+    "\n",
     "def is_html_file(content):\n",
     "    content = content.decode('utf-8', 'ignore').strip().lower()\n",
     "    if content.startswith('<!doctype html') is True:\n",
     "        return True\n",
     "    elif content.startswith('<html') is True:\n",
     "        return True\n",
-    "    return False\n",
-    "\n",
-    "def create_folder(folder_name, exist_ok=True):\n",
-    "    try:\n",
-    "        os.makedirs(folder_name, exist_ok=exist_ok)\n",
-    "        return folder_name\n",
-    "    except:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7cbc207c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.libimports.textidx  ==\n",
-    "\n",
-    "# === Inlined imports ===\n",
-    "import pickle\n",
-    "import spacy\n",
-    "from collections import Counter\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n"
+    "    return False"
    ]
   },
   {
