--- a/notebooks/standalone/word2vec_training_from_scratch_standalone.ipynb
+++ b/notebooks/standalone/word2vec_training_from_scratch_standalone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe3466f0",
+   "id": "6c60dd13",
    "metadata": {},
    "source": [
     "### Auto-Generated Code Cells\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be911de",
+   "id": "b93c3972",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,23 +30,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82787670",
+   "id": "dc8f2394",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.text.vectorizing.vocab  ==\n",
     "\n",
     "# === Inlined imports ===\n",
+    "from tqdm import tqdm\n",
     "import numpy as np\n",
     "from collections import Counter\n",
-    "from tqdm import tqdm\n",
     "\n",
     "# === Embedded configs ===\n",
     "\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def __init__(self, vocab):\n",
-    "    self.vocab = vocab\n",
+    "def set_default_index(self, default_index: int):\n",
+    "    if default_index >= len(self.index2token):\n",
+    "        raise Exception('Invalid default index.')\n",
+    "    self.default_index = default_index\n",
+    "\n",
+    "def decode(self, indices: list[int], default_token='[???]'):\n",
+    "    return [self.index2token[i] if int(i) < len(self.index2token) else default_token for i in indices]\n",
     "\n",
     "def encode(self, tokens: list[str]):\n",
     "    return np.asarray([self.token2index[t] if t in self.token2index else self.default_index for t in tokens])\n",
@@ -77,30 +82,57 @@
     "    def __len__(self):\n",
     "        return len(self.index2token)\n",
     "\n",
-    "def set_default_index(self, default_index: int):\n",
-    "    if default_index >= len(self.index2token):\n",
-    "        raise Exception('Invalid default index.')\n",
-    "    self.default_index = default_index\n",
-    "\n",
-    "def decode(self, indices: list[int], default_token='[???]'):\n",
-    "    return [self.index2token[i] if int(i) < len(self.index2token) else default_token for i in indices]"
+    "def __init__(self, vocab):\n",
+    "    self.vocab = vocab"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0733c0b",
+   "id": "36380af6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Inline content for module src.utils.compute.gpu  ==\n",
+    "\n",
+    "# === Inlined imports ===\n",
+    "import torch\n",
+    "import random\n",
+    "\n",
+    "# === Embedded configs ===\n",
+    "\n",
+    "\n",
+    "# === Inlined definitions ===\n",
+    "def select_device(force_cpu=False, required_memory_gb=None):\n",
+    "    if force_cpu == True:\n",
+    "        return torch.device('cpu')\n",
+    "    candidate_gpus = []\n",
+    "    for i in range(torch.cuda.device_count()):\n",
+    "        free, total = torch.cuda.mem_get_info(device=i)\n",
+    "        if required_memory_gb is None or free / (1024 * 1024 * 1024) > required_memory_gb:\n",
+    "            candidate_gpus.append((i, free))\n",
+    "    if len(candidate_gpus) == 0:\n",
+    "        return torch.device('cpu')\n",
+    "    else:\n",
+    "        device = torch.cuda.device(random.choice(candidate_gpus)[0])\n",
+    "        return torch.device(f'cuda:{device.idx}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a69da88a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Inline content for module src.utils.data.files  ==\n",
     "\n",
     "# === Inlined imports ===\n",
-    "import bz2\n",
-    "import os, re, yaml\n",
-    "import requests\n",
     "import zipfile, tarfile\n",
+    "import bz2\n",
     "from tqdm import tqdm\n",
+    "import requests\n",
+    "import os, re, yaml\n",
     "\n",
     "# === Embedded configs ===\n",
     "CONFIG = yaml.safe_load(\"\"\"urls:\n",
@@ -111,14 +143,6 @@
     "    \"\"\")\n",
     "\n",
     "# === Inlined definitions ===\n",
-    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
-    "    if base_url is None:\n",
-    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
-    "    if download_path is None:\n",
-    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
-    "    url = base_url + dataset_path\n",
-    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)\n",
-    "\n",
     "def download_file(url, download_path, overwrite=False, ignore_html=False):\n",
     "    file_name = url.split('/')[-1]\n",
     "    create_folder(download_path)\n",
@@ -185,39 +209,15 @@
     "        with open(output_file_name, 'wb') as output_file, bz2.BZ2File(file_name, 'rb') as file:\n",
     "            for data in iter(lambda: file.read(100 * 1024), b''):\n",
     "                output_file.write(data)\n",
-    "        return output_file_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16c71d9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Inline content for module src.utils.compute.gpu  ==\n",
+    "        return output_file_name\n",
     "\n",
-    "# === Inlined imports ===\n",
-    "import random\n",
-    "import torch\n",
-    "\n",
-    "# === Embedded configs ===\n",
-    "\n",
-    "\n",
-    "# === Inlined definitions ===\n",
-    "def select_device(force_cpu=False, required_memory_gb=None):\n",
-    "    if force_cpu == True:\n",
-    "        return torch.device('cpu')\n",
-    "    candidate_gpus = []\n",
-    "    for i in range(torch.cuda.device_count()):\n",
-    "        free, total = torch.cuda.mem_get_info(device=i)\n",
-    "        if required_memory_gb is None or free / (1024 * 1024 * 1024) > required_memory_gb:\n",
-    "            candidate_gpus.append((i, free))\n",
-    "    if len(candidate_gpus) == 0:\n",
-    "        return torch.device('cpu')\n",
-    "    else:\n",
-    "        device = torch.cuda.device(random.choice(candidate_gpus)[0])\n",
-    "        return torch.device(f'cuda:{device.idx}')"
+    "def download_dataset(dataset_path, base_url=None, download_path=None, overwrite=False, ignore_html=True):\n",
+    "    if base_url is None:\n",
+    "        base_url = CONFIG['urls']['downloads']['datasets']\n",
+    "    if download_path is None:\n",
+    "        download_path = 'data/datasets/' + '/'.join(dataset_path.split('/')[0:-1]) + '/'\n",
+    "    url = base_url + dataset_path\n",
+    "    return download_file(url, download_path=download_path, overwrite=overwrite, ignore_html=ignore_html)"
    ]
   },
   {
